--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -716,7 +716,7 @@ $$
 $$
 This proves that the family $\tau_f$ lies in $(H_A \to H_B)_C$. It has to be left without proof that these two correspondences are in­ verse to one another and provide a natural isomorphism.
 
-Well, this is a rather heavy construction starting from one little category $\C$. The question: what does it prove? Why worry about the functor category? The answer is that the func­tors give an interpretation of higher-order logic, as we hinted earlier, and now we have to pay up and demonstrate
+Well, this is a rather heavy construction starting from one little category $\C$. The question: {\it what does it prove}? Why worry about the functor category? The answer is that the func­tors give an interpretation of higher-order logic, as we hinted earlier, and now we have to pay up and demonstrate
 how to con­strue logical formulae. The idea from topos theory when spe­cialized to the functor category looks very much like Kripke models of intuitionistic logic --- except that the ``times'' form a category $\C$ rather than just a partially ordered set, as has often been emphasized by Lawvere (see, e.g. Lawvere (1975)).
 
 To make the logical language more definite, let us think of the domains $A$ in $\C$ as being (in a one-one correspondence with) type symbols. Introduce new type symbols built from the ones
@@ -821,7 +821,7 @@ is valid (i.e. forced at all $A$), then provided $x$ and $y$ have ground types $
 $$\forall x,z\, [z = fx \iff \Phi]$$
 is valid too. The validities, then give us an exact picture of $\C$ at the level of ground types: the higher-order theory is conservative over $\C$.
 
-But the higher-order intuitionistic theory of the functor category is much more than just a conservative extension; it is a full-blown higher-order theory with full comprehension axioms. That is to say, we started out with a category $\C$ we regarded algebraically as a theory of functions. Well, the construction of the functor category shows us that we can indeed construe $\C$ and its maps as normal, everyday functions in a normal, every­ day higher-order logic. This works as long as we agree to keep our logic intuitionistic. But experience with intuitionistic
+But the higher-order intuitionistic theory of the functor category is much more than just a conservative extension; it is a full-blown {\it higher-order} theory with full comprehension axioms. That is to say, we started out with a category $\C$ we regarded algebraically as a theory of functions. Well, the construction of the functor category shows us that we can indeed construe $\C$ and its maps as normal, everyday functions in a normal, every­ day higher-order logic. This works as long as we agree to keep our logic intuitionistic. But experience with intuitionistic
 logic really shows that the system is a natural one and that it
 leads to very, very interesting theories. Even if $\C$ is a \ccc, we can show that the embedding of $\C$ in the higher-order
 logic preserves all the cartesian closed structure, so that the function spaces in $\C$ really become spaces of all possible func­tions in the higher-order theory. The principles of $\l$-calculus are thus consequences of the standard logical axioms. This seems to me to establish complete harmony between (intuitionis­tic) logic and (typed) $\l$-calculus.
@@ -834,7 +834,7 @@ closed subcategories of the functor category. There are many of them and many st
 
 Having made any given \ccc\ $\C$ ``honest'' as a theory of func­tions in higher-order logic, we can conclude from the method of retracts of Section 3 that any type-free $\l$-theory can similarly be made honest. Intuitionistic logic is very tolerant of types $U$ where $\UU$ is a retract; so tolerant in fact that {\it any} $\l$ theory can be embedded in a suitable higher-order logic. Self­ application is no longer odd: it is something that may very well turn up when we weaken our logic to be intuitionistic but still require that functions spaces like $\UU$ contain all functions.
 
-This provides a certain kind of rescue for the type-free calculus, but the move fails to give it a universal role: the creators of the type-free theory hoped that such a universe U could be thought of as containing all the functions there were. We shall not try to go so far in the present context, but vari­ ous constructions can be used to show that not only is it pos­sible to have one such type-free domain, but it is always pos­sible to find them being richer and richer and containing more and more functions. Only a sketch of the construction can be given here.
+This provides a certain kind of rescue for the type-free calculus, but the move fails to give it a universal role: the creators of the type-free theory hoped that such a universe U could be thought of as containing all the functions there were. We shall not try to go so far in the present context, but vari­ ous constructions can be used to show that not only is it pos­sible to have {\it one} such type-free domain, but it is always pos­sible to find them being richer and richer and containing more and more functions. Only a sketch of the construction can be given here.
 
 Suppose, for the sake of illustration, we have some types $A$, $B$, $C$ that we happen to like, and that we are interested in the
 functions between them - possibly also in functions of the type $(A^2 \times B) \to C$, and similar multivariable types. We could probably work up a \ccc\  containing $A$, $B$, $C$ and these functions, but the straight-forward construction would contain no type­ free domains (cf. the category of sets and maps in ordinary logic). We need a new method. My first approach is to use the idea of continuous lattices. I do not want to go into a lot of detail (cf. Gierz et al. (1980) for just such details), but there is an easy definition that can be invoked at least to make the statements precise.
@@ -864,7 +864,7 @@ subfunctors in the functor category
 In the first place, consider $H_{A_*}$.	Let $K_A$ be the functor where $K_A(V)$ is just the set of all continuous functions
 $f: V\to A_*$ where for some $a \in A$, we have $a \in f(x)$ for all $x \in V$. (The retracts of $U$ are simply being regarded as injective spaces, and we do not distinguish between $A_*$ as a constructed space based on the set $A$ and as a retract of $U$.) The restric­tion operation 
 $\res f : K_A(V)\to K_A(W)$
-is the one for the functor $H_{A_*}$ with the domain cut down: $K_A$ is a subfunctor of $H_{A_*}$.
+is the one for the functor $H_{A_*}$ with the domain cut down: $K_A$ is a {\it subfunctor} of $H_{A_*}$.
 
 We can think of the maps in $K_A(V)$ as being the {\it constant} maps with
 values in $A$. So what then can we have for natural transformations $\nu: K_A \to K_B$, the maps in the functor category? Well, imagine one. Now if $a \in A$, we can take the appropriate con­stant map $k_a \in K_A(\bbone)$, where $\bbone$ is the one-element space. Then $\nu(k_a) \in K_A(\bbone)$.
@@ -875,9 +875,9 @@ What have we done? First, starting in sets --- or perhaps, better, in higher-ord
 have been unioned together so they were all subtypes (subsets) of a single set, $V$, say. We then embedded faithfully this category of sets and maps into the category of injective spaces via the very elementary $A_*$ construction. Of course, the spaces $A_*$ are very special, so the ``universal'' space $U$ with $\UU$ as a retract is much more messy than $V_*$. But the category of re­tracts of $U$ contains all the maps between the $A_*$. Finally this category of retracts is fully and faithfully embedded in the the functor category. The latter has the advantage of subtypes in profusion, so we were able to recapture the original cate­ gory of subsets of Vas a full and faithful subcategory of the functor category.
 
 And having done all this, what have we bought? Well, the (pictures of) the $A$'s were subtypes of the $A_*$'s which are both retracts and subtypes of $U$, and in the functor category $U$ is a model for the untyped $\l$-calculus. So that means that starting with our original notion of function, we have --- in the logic of the functor category --- consistently been able to assume that there are types giving models for the "type-free" $\l$-calculus,
-and further, that these types are rich enough to contain our original category in a full and faithful way. In more detail: the new logic allows us to think of $A$ and $B$ as subtypes of $U$, where $\UU$ is a retract, so that any function from $A$ into $B$ is the result of restricting a function in $\UU$ down to the subset $A$. Warning: this does not hold for all subtypes of $U$, the $A$, $B$, $C$ were given in advance and $U$ was constructed rela­tive to them. Still, this means that even in models for type­ free $\l$-calculus(which can be regarded as ordinary function spaces), we are not losing sight of the standard idea of func­tion. To have $\UU$ as a retract of $U$, the functions have to ``bend'' a little, but we have kept them ``straight'' as far as the given $A$, $B$, and $C$ go.
+and further, that these types are rich enough to contain our original category in a full and faithful way. In more detail: the new logic allows us to think of $A$ and $B$ as subtypes of $U$, where $\UU$ is a retract, so that any function from $A$ into $B$ is the result of restricting a function in $\UU$ down to the subset $A$. Warning: this does not hold for all subtypes of $U$, the $A$, $B$, $C$ were given in {\it advance} and $U$ was constructed rela­tive to them. Still, this means that even in models for type­ free $\l$-calculus(which can be regarded as ordinary function spaces), we are not losing sight of the standard idea of func­tion. To have $\UU$ as a retract of $U$, the functions have to ``bend'' a little, but we have kept them ``straight'' as far as the given $A$, $B$, and $C$ go.
 
-We have just shown how a type-free domain $U$ can incorporate given domains as well as the ``arbitrary'' functions on them. In Engeler (1979) it is shown that $\l$-calculus models can also in­ corporate any algebra; specifically it is shown that any alge­bra can be made isomorphic to a subset of the model where the operation is functional application itself. We shall give a proof here using the constructs we have mentioned.
+We have just shown how a type-free domain $U$ can incorporate given domains as well as the ``arbitrary'' functions on them. In Engeler (1979) it is shown that $\l$-calculus models can also in­ corporate any {\it algebra}; specifically it is shown that any alge­bra can be made isomorphic to a subset of the model where the operation is functional application itself. We shall give a proof here using the constructs we have mentioned.
 
 Let $A$ be set. An ``algebra'' can be regarded as any binary operation $\dotop : A\times A\to A$. 
 A partial algebra can be taken to be any continuous $\dotop : A_* \times A_* \to A$.
@@ -895,7 +895,7 @@ where the $\l$-operator gives an element in $\UU$. This map is continuous and on
 \rho(a)(\rho(b)) &= \rho(a\dotop \rho(b)_0)\\
 &= \rho( a  \dotop  b)
 \end{align*}
-So the image of $\rho$ is closed under application, and the result­ing applicative subalgebra is isomorphic to the given algebra
+So the image of $\rho$ is closed under application, and the result­ing applicative subalgebra is {\it isomorphic} to the given algebra
 $\langle A_*, \dotop \rangle$. 
 
 This result would seem to have a potentially useful implica­tion for {\it non-extensional} models of combinatory algebra: any such can be embedded in an application-preserving way into an extensional model. This works even if we regard application as a partial operation. {\it Warning}: we do not obtain a combinator­ preserving embedding, however. That is, if the algebra $\langle A_*, \dotop \rangle$ has elements $S$ and $K$, satisfying the usual equations in $A_*$ we cannot conclude that the embedding $\rho : A_* \to U$ will map the $S$ and $K$ of $A_*$ to the ``true'' $S$ and $K$ of the $\l$-calculus model
