--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -973,18 +973,21 @@ Johnstone, P., (1977). "Topos Theory", London Math. Soc.
 Monographs No. 10, Academic Press, London.
 
 \bibitem[6]{6} Joyal, A., and Reyes, G.E., (1980). {\it Forcing and generic models in categorical logic}, J. Pure and Applied Algebra, to appear.
-Lawvere, F.W., (1975). Continuously variable sets: algebraic geometry= geometric logic, In "Logic Colloquium '73", (Eds. H.E. Rose and J.C. Shepherdson), North-Holland, Amsterdam, pp. 135-156.
 
-\bibitem[7]{7} MacLane, S. (1971). {\it Categories for the Working Mathematician}, Springer-Verlag, Heidelberg.
+\bibitem[7]{7} Lawvere, F.W., (1975). {\it Continuously variable sets: algebraic geometry$\,=\,$geometric logic}, In "Logic Colloquium '73", (Eds. H.E. Rose and J.C. Shepherdson), North-Holland, Amsterdam, pp. 135-156.
 
-\bibitem[8]{8} Plotkin, G. (1972). {\it A set-theoretical definition of application}, Memo, MIP-R-95, School of Artificial Intelligence, Univ. of Edinburgh.
+\bibitem[8]{8} MacLane, S. (1971). {\it Categories for the Working Mathematician}, Springer-Verlag, Heidelberg.
+
+\bibitem[9]{9} Plotkin, G. (1972). {\it A set-theoretical definition of application}, Memo, MIP-R-95, School of Artificial Intelligence, Univ. of Edinburgh.
 Scott, D.S., (1976). Data types as lattices, Siam J. Computing,
 Vol. 5, pp. 522-587.
 
-\bibitem[9]{9} Scott, D.S., (1979). {\it Identity and existence in intuitionistic logic}, In "Applications of Sheaves", Springer-Verlag, Lecture Notes in Math. Vol. 753, pp. 660-696.
+\bibitem[10]{10} Scott, D.S., (1979). {\it Identity and existence in intuitionistic logic}, In "Applications of Sheaves", Springer-Verlag, Lecture Notes in Math. Vol. 753, pp. 660-696.
 
-\bibitem[10]{10} Scott, D.S., (1980). {\it Lambda calculus: Some models, some philosophy}, In The Kleene Symposium, (Eds. J. Barwise,
+\bibitem[11]{11} Scott, D.S., (1980). {\it Lambda calculus: Some models, some philosophy}, In The Kleene Symposium, (Eds. J. Barwise,
 H.J. Keisler, and K. Kunen), North-Holland, Amsterdam, pp. 381-421.
 Szabo, M.E., (1978). "Algebra of proofs", North-Holland, Amsterdam.
+
+\bibitem[12]{12} Szabo, M.E., (1978). {\it Algebra of proofs}, North-Holland, Amsterdam.
 
 \end{thebibliography}
