--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -531,7 +531,7 @@ $$
 $$
 Because in higher-order logic we can prove Cantor's Theorem which implies that the only type $U$ which has a surjective map
 $j : U \to	\UU$ is the one-element type. Thus, if a typed theory had such a type (and we know many), then the adding of the
-standard higher-order axioms (where we construe $(\AB)$ as the total function space of all functions) would not at all be conservative, Something else has to be tried, and the answer is higher-order intuitionistic logic.
+standard higher-order axioms (where we construe $(\AB)$ as the total function space of all functions) would not at all be conservative. Something else has to be tried, and the answer is higher-order {\it intuitionistic} logic.
 
 As we shall now have to consider more than one category, let me call our given \ccc\ the category $\C$. To fix ideas, the constructions to be carried out will be done in ordinary set theory --- with classical logic! The models obtained, however, will only satisfy intuitionistic logic. The obvious lack of harmony can be repaired, but it would take too much explanation here.	Moreover, we are also going to assume that the given category $\C$ is a set. This is not much of a restriction, since we were thinking of $\C$ as a theory and usually a theory has a limited number of symbols in any case.
 
