--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -550,10 +550,10 @@ a category in themselves. What is needed is a definition of transformation betwe
 
 What is a {\it natural transformation} $v : F\to G$? It is an association with every domain $A$ of $\C$ of a function $\nu_A: F(A)\to G(A)$ so that whenever $f : \BA$ in $\C$, then the following diagram commutes in $\S$:
 \[
-  \begin{tikzcd}
+\begin{tikzcd}[row sep=.75in, column sep = .75in]
     F(A) \arrow{d}{\nu_A} \arrow{r}{F(f)}  & F(B) \arrow{d}{\nu_B} \\
-    G(A)  \arrow{r}{G(f)} & G(B)\\
-  \end{tikzcd}
+    G(A)  \arrow{r}{G(f)} & G(B)
+\end{tikzcd}
 \]
 This means $\nu_B \comp F(f) = G(f) \comp \nu_A$. And example will help explain this.
 
@@ -568,9 +568,9 @@ ways to calculate it owing to the associativity of composition (in $\C$); that i
 Not only are the $H_C$ pleasant functors with cooperative natural transformations between them, but the by now classic {\it Yoneda Lemma}
 proves for us that the only natural transformamations $\nu \in H_C \to H_D$
 are those of the form $H_g$ for some $g: C\to D$. If we remark that if $k:D\to E$, then
-$$
+\[
 H_k \comp H_g = H_{k \comp g}
-$$
+\]
 %
 This shows us that $H : \C \to \S^{\C^{op}}$ is a ({\it covariant}) functor between these categories.
 Of course $H_C$ uniquely determines $C$ and
@@ -590,31 +590,31 @@ $$
 where  $f : \BA$ and $g: C\to B$ in $\C$. To define a functor $U$, then, we just have to give the domains and the restrictions.
 For example the unit functor $\bbone$ has $\bbone_A = {0}$, a one-point set, and all restrictions constant $0 \res f = 0$. And all natural transformations into $\bbone$ are constant.
 
-Now suppose $U$ and $V$ are two functors. We define $U \times V$ so that for all $A \in \C$
+Now suppose $U$ and $V$ are two functors. We define $U \times V$ so that for all $A \in \C$:
 $$
-(U \times V)_A = U_A \times V_A
+(U \times V)_A = U_A \times V_A .
 $$
 %
 Whenever $a \in U_A$ and $b \in U_A$ and $f: \BA$ then
 $$
-(a,b) \res f = (a \res f, b \res f)
+(a,b) \res f = (a \res f, b \res f) .
 $$
 (Note that the restriction symbol above is used in three different senses.) The natural transformations $p : U \times V \to U$ and $q: U\times V \to V$ have obvious pointwise definitions  (e.g. $P_A= P_{{U_A}{V_A}} : U_A \times V_A \to UA$) and they clearly commute with restrictions. Similarly if $\mu: W \to U$ and $\nu: W\to V$ are given natural transformations then $\langle \mu, \nu \rangle: W \to U \times V$ is also defined pointwise:
 $$
-{\langle \mu, \nu \rangle}_A = \langle \mu_A, \nu_A \rangle : W_A \to U_A \times V_A
+{\langle \mu, \nu \rangle}_A = \langle \mu_A, \nu_A \rangle : W_A \to U_A \times V_A .
 $$
 %
 Again it is obvious that these maps commute with restrictions, so ${\langle \mu, \nu \rangle}$ is natural. As all of this is pointwise; the verification of such equations as $p \comp \langle \mu, \nu \rangle = \mu$ is easy. Again suppose $U$ and $V$ are given. In defining $(U \to V)$, we cannot be quite as pointwise. That is, $(U \to V)_A$ cannot be taken simply as the set of functions $(U_A \to V_A)$, the function space in sets. The reason, roughly, is that when we have a function at {\it one} stage, we also have to know how it restricts at {\it later} stages; a simple mapping from $U_A$ into $V_A$ does not give us enough information for that. When $f : \BA$, restriction on
 $U_A$ maps into $U_B$; this is the wrong direction for us to be able to pass from an arbitrary function defined on $U_A$ to one defined on $U_B$. So an element of $(U \to V)_A$ has to be a whole {\it family} of functions:
 $$
-\ffam_f: U_B \to V_B
+\ffam_f: U_B \to V_B,
 $$
 %
 one for each $f: \BA$. (Note: $A$ is fixed, $f$ and $B$ are variable.) Moreover, we must assume that all is harmonious with
 restrictions: $c \res g = \ffam_{f \comp g} (b \res g)$ whenever $c = \ffam_f(b)$, for $b,c \in U_B$ and $g : C\to B$ in $\C$. In words, $\ffam_{\id_A}$ is the ``present'' function; while $\ffam_f$ is what becomes of it in the ``future'', supposing time evolves along $f$. Now families $\ffam$ of this kind in
 $(U\to V)_A$ have to be restricted. By what we just said, the following is more or less forced upon us:
 $$
-(\ffam \res f)_g = \ffam_{f\comp g}
+(\ffam \res f)_g = \ffam_{f\comp g},
 $$
 %
 where $f : \BA$ and $g: C\to B$ so that $(\ffam \res f)$ is a family in $(U\to V)_B$.
@@ -629,7 +629,7 @@ So $\ev_A : ((V \to W)_A \times V_A) \to W_A$. If $f: \BA$ then
 \ev_A(\ffam, a) &= \ffam_{\id_A}(a) \res f\\
 &= \ffam_f(a \res f)\\
 &= (\ffam \res f)_{\id_B} (a \res f)\\
-&= \ev_B(\ffam \res f, a \res f)
+&= \ev_B(\ffam \res f, a \res f).
 \end{align*}
 %
 This proves $\ev$ is natural.
@@ -654,13 +654,13 @@ To show $\L\psi$ is natural, we must calculate:
 %
 for $a \in U_A$, $f : \BA$ and $g: C\to B$, $c \in U_C$. It follows that
 $$
-(\L \psi)_A \res f = (\L \psi)_B (a \res f)
+(\L \psi)_A \res f = (\L \psi)_B (a \res f).
 $$
 %
 We have to leave to the reader the verification of the two basic equations of \ccc's involving $\ev$, $A$, $p$ and $q$. As there was only one way that the definitions could be written, the verification is quite mechanical, however.
 As I said before, the functor category is ``powerful'', and indeed it is much more than a \ccc\  For instance, we can de fine the analogue of the {\it power set} for arbitrary functors. For any $U$, let $(\PU)_A$ be the collection of all families $S_f$ indexed by $f: \BA$ where $S_f \subseteq U_B$ and such that $b\res g \in S_{f \comp g}$ whenever $b\in S_f$ and $g: C\to B$ in $\C$. Restriction is defined by
 $$
-(\S \res f)_g = S_{f \comp g}
+(\S \res f)_g = S_{f \comp g}.
 $$
 %
 The significance of the power operator will become clear when we speak about higher-order logic.
@@ -670,7 +670,7 @@ Having seen why the functor category is a \ccc, it is good to pause a moment to 
 a \res f &= \alpha_A(0) \res f\\
 &= \alpha_B(0 \res f)\\
 &= \alpha_B(0)\\
-&= a_B
+&= a_B .
 \end{align*}
 This is very strong indeed, since usually if $a \in U_A$ and $f_0, f_1 :\BA$, there is no reason why $a \res f_0 = a \res f_1$.
 So the number of ``elements'' of U will very likely be rather small. (And, even worse, $a_A$ has to be chosen for all $A$ in $\C$.)
@@ -681,7 +681,7 @@ out of $(\PU)_A$ even further. Write $S_A= \sigma_A(O)$ , then $S_A\subseteq U_A
 S_B &= \sigma_B(0)_{\id_b}\\
 &= \sigma_B(0 \res f)_{\id _B}\\
 &= (\sigma_A(0) \res f)_{\id _B}\\
-&= \sigma_A(0)_f
+&= \sigma_A(0)_f .
 \end{align*}
 This means that $\sigma_A(0)_f$ is determined from the $S_B$'s. And if they are chosen so that
 $$
@@ -738,7 +738,7 @@ than theirs since the category $\C$ carries no topology; in an other respect it 
   A & \mm y = f(x) [s] & {\textrm{ iff }} & s(y) = f \comp s(x) &\\
   A & \mm z = (x,y) [s] & {\textrm{ iff }} & s(z) = s(x,y) &\\
   A & \mm z = x(y) [s] & {\textrm{ iff }} & s(z) = s(x)_{\id_A} s(y) &\\
-  A & \mm y \in x [s] & {\textrm{ iff }} & s(y) \in s(x)_{\id_A} &\\
+  A & \mm y \in x [s] & {\textrm{ iff }} & s(y) \in s(x)_{\id_A} &
 \end{align*}
 These were for the atomic cases and the reader should stop and think how the types are supposed to match. For the compound cases we have:
 
@@ -752,9 +752,8 @@ These were for the atomic cases and the reader should stop and think how the typ
   &&& \textrm{and } b \in H_{T}(B), \textrm{ then} \\
   &&& B \mm \Phi[s \res f (b/x)]\\
   A & \mm [\exists x.\, \Phi [s] & {\textrm{ iff }} & \textrm{there is an } a \in H_T(A)\\
-  &&& \textrm{such that } A \mm \Phi[s(a/x)]\\
+  &&& \textrm{such that } A \mm \Phi[s(a/x)]
 \end{align*}
-
 In the above, the notation $s(a/x)$ means the valuation is fixed
 so that $a$ matches $x$; of course the type of $x$ must be $T$. By $s \res f$ we mean the valuation that matches $s(x)\res f$ with each of the relevant variables $x$. In each case the restriction operation must be made appropriate to the functor $H_T$ where $T$ is the type of $x$.
 
@@ -762,7 +761,7 @@ This is so much like Kripke models, the reader will have no problem in showing e
 
 In order to verify the special axioms of higher-order logic, we need to remark first on what Joyal-Reyes call the ``functorial'' character of $\mm$ :
 $$
-\textrm{if } A\mm\Phi[s] \textrm{ and } f:\BA \textrm{ then } B \mm \Phi[s \res f]
+\textrm{if } A\mm\Phi[s] \textrm{ and } f:\BA \textrm{ then } B \mm \Phi[s \res f] .
 $$
 This, too, is a property familiar from Kripke models. It plays a direct role in the verification of the comprehension axiom:
 $$
@@ -774,12 +773,12 @@ To show the above valid in the interpretation we only have
 to show that for every $A$ of $\C$ and for all $b_O, \dots ,b_{n-l}$ in the $H_S(A)$ of the appropriate types $S$, there is an element
 $c \in H_{P(T)}(A)$ such that
 $$
-A \mm \forall\, y \,\, [y \in x \iff \Phi][s]
+A \mm \forall\, y \,\, [y \in x \iff \Phi][s] .
 $$
 %
 Here $s$ is the valuation where $s(x) = c$ and $s(u_i) = b_i$. We have to define $c$. For each $f: \BA$ let
 $$
-c_f = \{t \in H_T(B) \mid B \mm \Phi [s \res f(t/y] \}
+c_f = \{t \in H_T(B) \mid B \mm \Phi [s \res f(t/y] \} .
 $$
 %
 The functorial character of $\mm$ proves for us that $c \in H_{P(T)}(A)$. It is now easy to check from the clauses of the definition of $\mm$ that at $A$ the above formula is indeed forced.
@@ -789,7 +788,7 @@ $$
 \forall x \, \exists y \, \forall z \, [ z = y \iff \Phi] \imp \exists f\, \forall x,z\, [z = f(x) \iff \Phi ]
 $$
 %
-Where we have $x$ of type $T$, $y$ and $z$ of type $S$; f of type $(T\to S)$ and $y$ not free in $\Phi$. Again, the functorial character of $\mm$
+where we have $x$ of type $T$, $y$ and $z$ of type $S$; f of type $(T\to S)$ and $y$ not free in $\Phi$. Again, the functorial character of $\mm$
 connects with the way we had to define $(H_T \to H_S)$.
 
 We also have to verity such extensionality properties as:
