--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -307,7 +307,7 @@ q_{AB} \comp \langle f,g \rangle &= g\\
 \end{align*}
 %
 that is to say, there is an explicit one-one correspondence between the pairs of maps $f$,
-$g$ and the map $h$ into the product. This all now makes $A times B$ well behaved within
+$g$ and the map $h$ into the product. This all now makes $A \times B$ well behaved within
 the category.
 
 So much for a theory of tuples and multiary maps. But we still want a theory of functions:
