--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -452,7 +452,7 @@ the product and the function space. The axioms set down are just those needed to
 structuring explicit. The reason that category theory is a convenient way to formalize
 this definition is that starting from the especially elementary concept of maps under
 composition, we can see that we have done nothing more than close up under products and
-function spaces. $\l$-calculus, then, becomes mostly a notational de vice for setting down
+function spaces. $\l$-calculus, then, becomes mostly a notational device for setting down
 our functional equations. At least for typed $\l$-calculus, we can see in this way that it
 is harmless.
 
@@ -469,7 +469,7 @@ A final remark must be added to this section to clear up a possible confusion be
 theories} and {\it models}. Up to this point we have been talking about theories. In many
 systems of logic models can be described by theories: every model has a ``diagram''
 involving constants for all the ``elements'' of the model and taking as axioms all
-statements in the language ``true'' about the model. It depends on the na,ture of the
+statements in the language ``true'' about the model. It depends on the nature of the
 logic how hard it is to show that every ``consistent'' theory has a model.
 
 In the case of a \ccc, a domain $A$ could be said to have an ``element'' $a$ if there is a
