--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -1069,7 +1069,7 @@ reason why $a \res f_0 = a \res f_1$. So the number of ``elements'' of U will ve
 be rather small. (And, even worse, $a_A$ has to be chosen for all $A$ in $\C$.)
 
 In the special case $\sigma :\bbone \to \PU$ we can simplify the choices out of $(\PU)_A$
-even further. Write $S_A= \sigma_A(O)$ , then $S_A\subseteq U_A$ for all $A \in \C$.
+even further. Write $S_A= \sigma_A(0)$ , then $S_A\subseteq U_A$ for all $A \in \C$.
 Moreover, when $f: \BA$, then
 \begin{align*}
 S_B &= \sigma_B(0)_{\id_b}\\
@@ -1202,7 +1202,7 @@ where the free variables of $\Phi$ are among $u_0, \dots, u_{n-1}$ and $x$ is a 
 variable not free in $\Phi$ of type $\P T$ where $T$ is the type of $y$.
 
 To show the above valid in the interpretation we only have to show that for every $A$ of
-$\C$ and for all $b_O, \dots ,b_{n-l}$ in the $H_S(A)$ of the appropriate types $S$, there
+$\C$ and for all $b_0, \dots ,b_{n-l}$ in the $H_S(A)$ of the appropriate types $S$, there
 is an element $c \in H_{P(T)}(A)$ such that
 $$
 A \mm \forall\, y \,\, [y \in x \iff \Phi][s] .
