--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -67,7 +67,7 @@
 \def\P{\mathcal P}
 
 % make a ||- symbol
-\def\mm{\mathrel{||}\mathrel{\mkern-4.4mu}\relbar}
+\def\mm{\mathrel{||}\joinrel\relbar}
 
 \def\UU{(U\to U)}
 \def\BA{B \to A}
@@ -1527,7 +1527,7 @@ employed in the construction is one of the very first examples of a topos; there
 considerable use possible of more interesting examples of topoi.
 
 However, there was already enough philosophical interest in this easy construction.
-Namely, it was seen that equational $\l$- calculus is perfectly consistent with
+Namely, it was seen that equational $\l$-calculus is perfectly consistent with
 higher-order logic where --- provided we only employ intuitionistic logic --- we can speak
 of function spaces in the normal way in type theory. Some people can, if they like, stick
 to $\l$-terms and equations; but others can use whatever logical means they like for dis
