--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -1351,7 +1351,7 @@ As an example of injective spaces, consider one of our given types $A$, which fo
 simplicity we construe just as a set. The injective space $A_*$ corresponding to $A$
 results from adding one new point $*$. Or, if classical logic is not assumed, we take
 $A_*$ as the space of subsets of $A$ with at most one element. The topology is generated
-by sets of the form ${x \in A_* \mid  a \in x}$ where $a \in A$, Thus, a function $f : X
+by sets of the form $\{x \in A_* \mid  a \in x\}$ where $a \in A$, Thus, a function $f : X
 \to A_*$ is {\it continuous} if $\{x \in X \mid a \in f(x)\}$ is open in $X$ for each $a
 \in A$. Now if $X \subseteq Y$ as a dense subspace, we have only to define
 $$
@@ -1374,7 +1374,7 @@ $U$ which, in the category of injective spaces, has $\UU$ as a (continuous) retr
 addition has $A_*$, $B_*$, and $C_*$ as retracts. (In fact, for those who know the method,
 we solve the domain equation
 $$
-u = A_* \times B_* \times c_* \times (U \to U),
+u = A_* \times B_* \times C_* \times (U \to U),
 $$
 where of course a factor is always a retract of a product; be cause in the category of
 injective spaces the one-point space is a retract of every space.) This idea could be
@@ -1452,7 +1452,7 @@ defined as $f_1(x)$ because $f_1 \in \UU$. Now recall that $\l$-calculus models 
 the fixed-point theorem; so we can define a map $\rho: A_*\to U$ by the functional
 equation:
 $$
-\rho(a)  =  (a, \l x: U. \,\,\rho (a \dotop x_0)
+\rho(a)  =  (a, \l x: U. \,\,\rho (a \dotop x_0))
 $$
 where the $\l$-operator gives an element in $\UU$. This map is continuous and one-one
 into. Now calculate in $U$:
