--- a/scott-1980/scott-1980-ch.tex
+++ b/scott-1980/scott-1980-ch.tex
@@ -21,7 +21,11 @@ bookmarksopenlevel=10
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[bb=pazo,cal=cm,scr=esstix]{mathalpha}
 \usepackage{eulervm}
+
+
 % make a ||- symbol
+% the right amount to kern backwards is font dependent here. so it's here instead of
+% in the main file.
 \def\mm{\mathrel{||}\mathrel{\mkern-3.5mu}\relbar}
 
 \input scott-main
