--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -1452,13 +1452,13 @@ defined as $f_1(x)$ because $f_1 \in \UU$. Now recall that $\l$-calculus models 
 the fixed-point theorem; so we can define a map $\rho: A_*\to U$ by the functional
 equation:
 $$
-\rho(a)  =  (a, \l x: U. \,\,\rho (a \dotop x_0))
+\rho(a)  =  (a, \l x: U. \,\,\rho (a \dotop x_0)) ,
 $$
 where the $\l$-operator gives an element in $\UU$. This map is continuous and one-one
 into. Now calculate in $U$:
 \begin{align*}
 \rho(a)(\rho(b)) &= \rho(a\dotop \rho(b)_0)\\
-&= \rho( a  \dotop  b)
+&= \rho( a  \dotop  b) .
 \end{align*}
 So the image of $\rho$ is closed under application, and the resulting applicative
 subalgebra is {\it isomorphic} to the given algebra $\langle A_*, \dotop \rangle$.
