--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -294,7 +294,7 @@ a good theory), but not all categories are ``logical'' even if they have product
 example of groups, what was ``missing'' was the group multiplication $\mu: B^2 \to B$ as a
 map in the category. (Inverse is missing as well, since it reverses order.) There is an
 interesting theory of algebraic theories that address the question of the proper
-categorial construction of categories of algebras, but I do not think we should invoke
+categorical construction of categories of algebras, but I do not think we should invoke
 that theory here.
 
 The precise description of products is as follows. We assume our category has a special
@@ -433,7 +433,7 @@ Of course this all has to be defined more rigorously, but I hope I have conveyed
 part of the idea of Lambek's correspondence. A typed $\l$-calculus (with pairs, products,
 and function spaces) is just another notation for a {c.c.c}.
 
-No, we have to be more specitic than that. Take a \ccc\ How does it correspond to a theory
+No, we have to be more specific than that. Take a \ccc\ How does it correspond to a theory
 (of functions)? The domains of the category are the types of the theory, and they are
 structured by the $\bbone$, $(A \times B)$, $(\AB)$ operations on types. Things like
 $\comp$, $0$, $p$, $q$, $\langle\cdot,\cdot\rangle$, $\ev$, and $\L$ stand for logical
@@ -697,10 +697,10 @@ some theories should come as no surprise. (For the explicit examples consult Bar
 
 The remedy is to adjoin indeterminates (constants without new axioms) until ``enough'' is
 reached. (A proof is also found in Barendregt (1980).) As with the typed calculus, every
-the ory has a model which satisfies exactly the same equations as are provable in the
+theory has a model which satisfies exactly the same equations as are provable in the
 theory (one might call it a conservative model). The notion of a $\l$-model has not struck
 people as quite satisfactory because the extensionality principle in the ``enough'' clause
-is not very algebraic. A suggestion of mine is mention ed in the cited references, but I
+is not very algebraic. A suggestion of mine is mentioned in the cited references, but I
 think it would be useful to recast the idea in the light of the present discussion.
 
 In typed $\l$-calculus, the categorical formulation is one way of eliminating all use of
@@ -721,7 +721,7 @@ S(u)(v)(x) = u(x)(v(x)),
 \end{dcases}
 \]
 %
-as usual. But these are not sufficient to express extensionallity which in $\l$-notation
+as usual. But these are not sufficient to express extensionality which in $\l$-notation
 reads
 $$
 \forall x.\, \tau = \sigma \imp \lm{x}. \tau = \lm{x}. \sigma
@@ -848,7 +848,7 @@ extension result for theories: a $\l$-theory is an equational theory, and every 
 equational theory can be expanded to a first-order theory {\it without} forcing any new
 equations on us,  In the untyped case, the style of first-order theory is that of axioms
 $(*)$, $\ss$, $\sss$ of the previous section. These are the ``logical'' axioms (i.e.
-common to all such tneories); the non-logical axioms would be all the equations between
+common to all such theories); the non-logical axioms would be all the equations between
 closed $\l$-terms demanded by whatever equational theory we started with --- and these
 special equations could involve special ``non-logical'' constants.
 
@@ -936,7 +936,7 @@ $\C$); that is why the necessary diagram commutes.
 
 Not only are the $H_C$ pleasant functors with cooperative natural transformations between
 them, but the by now classic {\it Yoneda Lemma} proves for us that the only natural
-transformamations $\nu \in H_C \to H_D$ are those of the form $H_g$ for some $g: C\to D$.
+transformations $\nu \in H_C \to H_D$ are those of the form $H_g$ for some $g: C\to D$.
 If we remark that if $k:D\to E$, then
 \[
 H_k \comp H_g = H_{k \comp g}.
@@ -1272,7 +1272,7 @@ Further, functions like fare well defined:
 $$
 \forall x\, \exists y.\, y = fx .
 $$
-There are many principles of identity that should be men tioned, but we will not write
+There are many principles of identity that should be mentioned, but we will not write
 them down here. Among them we would also find the statements that there is a unique
 element of type $\bbone$ and all maps of type $(T\to \bbone )$ are constant. (Perhaps the
 constant 0 should figure in the language, but it is not all that essential.)
@@ -1321,8 +1321,8 @@ still require that functions spaces like $\UU$ contain all functions.
 
 This provides a certain kind of rescue for the type-free calculus, but the move fails to
 give it a universal role: the creators of the type-free theory hoped that such a universe
-U could be thought of as containing all the functions there were. We shall not try to go
-so far in the present context, but vari ous constructions can be used to show that not
+$U$ could be thought of as containing all the functions there were. We shall not try to go
+so far in the present context, but various constructions can be used to show that not
 only is it possible to have {\it one} such type-free domain, but it is always possible to
 find them being richer and richer and containing more and more functions. Only a sketch of
 the construction can be given here.
@@ -1359,7 +1359,7 @@ $$
 $$
 where N ranges over the open sets of Y. Because every non-empty open set has a non-empty
 intersection with $X$, it follows that $\bar{f} : Y \to A_*$. To prove $\bar{f}$
-continuous, we remark that $\{a \in \bar{f}(y)\}$ is the largest open subset of $Y$ whose
+continuous, we remark that $\{ y \in Y \mid a \in \bar{f}(y)\}$ is the largest open subset of $Y$ whose
 intersection with $X$ gives $\{x \in X \mid a \in f(x)\}$. It is also easy to calculate
 that $\bar{f}$ extends $f$. So $A_*$ is injective. Note, too, that $A$ may be regarded as
 a dense subspace of $A_*$ if we map $a$ to $\{a\}$.
@@ -1431,7 +1431,7 @@ $A$ and $B$ as subtypes of $U$, where $\UU$ is a retract, so that any function f
 into $B$ is the result of restricting a function in $\UU$ down to the subset $A$. Warning:
 this does not hold for all subtypes of $U$, the $A$, $B$, $C$ were given in {\it advance}
 and $U$ was constructed relative to them. Still, this means that even in models for type
-free $\l$-calculus(which can be regarded as ordinary function spaces), we are not losing
+free $\l$-calculus (which can be regarded as ordinary function spaces), we are not losing
 sight of the standard idea of function. To have $\UU$ as a retract of $U$, the functions
 have to ``bend'' a little, but we have kept them ``straight'' as far as the given $A$,
 $B$, and $C$ go.
@@ -1487,7 +1487,7 @@ best to summarize the principal conclusions we have reached.
 
 As was stated, this has been known for well over ten years from the work of Lambek. It
 should be stressed, however, that category theory achieves a greater generality than the
-usual logical presentations, because in category theory the type con structions are
+usual logical presentations, because in category theory the type constructions are
 axiomatized. Thus, the types form an ``algebra'' under the operations $T \times U$ and
 $(T\to U)$. We need not assume that we always have a ``free'' algebra of types built out
 of ``ground'' types.
@@ -1549,8 +1549,8 @@ Though we did not prove such a sweeping result, we did sketch a proof of:
 subtypes of a reflexive type in a higher-order theory.}
 
 We did not work out the cartesian closed details of this assertion but contented ourselves
-with showing how to accomodate a finite number of types. By the way, it should be remarked
-that 4 and 5 hold for an arbitrary (small) category, so in par ticular we have the (known)
+with showing how to accommodate a finite number of types. By the way, it should be remarked
+that 4 and 5 hold for an arbitrary (small) category, so in particular we have the (known)
 result that every category can be conservatively extended to a \ccc\  The method of proof
 for 5 was via the author's original construction of $\l$-calculus models, which can be
 conveniently carried out in the category of ``injective'' $T_0$-spaces. There are many
@@ -1605,7 +1605,7 @@ Semantics}, North-Holland, Amsterdam, to appear.
 D.S., (1980). {\it A Compendium of Continuous Lattices}, Springer-Verlag, Heidelberg, to
 appear.
 
-\bibitem[4]{4} Goldblatt, R., (1979). {\it Topoi: The Categorial Analysis of Logic},
+\bibitem[4]{4} Goldblatt, R., (1979). {\it Topoi: The Categorical Analysis of Logic},
 North-Holland, Amsterdam.
 
 \bibitem[5]{5} Hindley, R., and Longo, G., (1980). {\it Lambda calculus models and
