--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -349,7 +349,7 @@ A\times B \to C$ is a map with two arguments. In an evaluation $h(x,y)$, we can 
 holding $x$ constant and regarding $h(x,y)$ as a function of $y$. We need a name for this
 function --- and for the correspondence with possible values of $x$. We write
 $$
-\L_{ABC}\, h : A\times B \to C
+\L_{ABC}\, h : A\to (B \to C)
 $$
 %
 so that the function we were thinking of --- given $x$ --- was $(\L_{ABC} h)\, (x)$. But
