new version microtype page layout

--- a/1912.10642/ct-notes-new.tex
+++ b/1912.10642/ct-notes-new.tex
@@ -22,6 +22,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+\setcounter{tocdepth}{3}
 
 % Other packages
 %\usepackage[left=1.5cm,right=1.5cm,top=1.7cm,bottom=1.7cm]{geometry} % we can adjust these values (making sure that title and TOC page look good)
