--- a/1912.10642v6/ct-notes-new.tex
+++ b/1912.10642v6/ct-notes-new.tex
@@ -5,14 +5,33 @@
 \usepackage[style=alphabetic]{biblatex}
 \bibliography{notes}
 
+\sloppy
+
+\deffootnote[1em]{1em}{1em}{\textsuperscript{\thefootnotemark}}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\setcounter{tocdepth}{3}
+
 % Other packages
-\usepackage[left=2.5cm,right=2.5cm,top=2.7cm,bottom=2.7cm]{geometry} % we can adjust these values (making sure that title and TOC page look good)
+\usepackage[papersize={7.0in, 10.0in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{latexsym}
-\usepackage[bookmarks]{hyperref}
 \usepackage{amsthm}
 %\usepackage{eucal}
 \usepackage{graphicx}
@@ -74,12 +93,13 @@
 
 %font Palladio
 \usepackage[T1]{fontenc}
-\usepackage{newpxtext,newpxmath}
+\usepackage{newpxtext}
+\usepackage{newpxmath}
 
 % PAGE SETTINGS
 \setkomafont{disposition}{\normalfont\bfseries}
 \setlength{\jot}{2ex}
-\linespread{1.2} 
+\linespread{1.1} 
 
 % CHANGE AUTHOR, TITLE, ETC HERE!
 \newcommand{\auth}[0]{Paolo Perrone}
@@ -98,7 +118,6 @@ colorlinks, linktocpage=true, pdfstartpage=1, pdfstartview=FitV,%
 breaklinks=true, pdfpagemode=UseNone, pageanchor=true, pdfpagemode=UseOutlines,% 
 plainpages=false, bookmarksnumbered, bookmarksopen=true, bookmarksopenlevel=1,%
 hypertexnames=true, pdfhighlight=/O,%
-urlcolor=darkblue, linkcolor=black, citecolor=black, %}
 }
 \pdfinfo{%
   /Title    (\tit)
@@ -110,6 +129,8 @@ urlcolor=darkblue, linkcolor=black, citecolor=black, %}
 
 
 %% MATH %%
+
+\input{../helpers/cmrsum}
 
 \numberwithin{equation}{section}
 
@@ -222,6 +243,7 @@ urlcolor=darkblue, linkcolor=black, citecolor=black, %}
 
 
 \begin{document}
+\pagestyle{plain}
 
 \maketitle
 
@@ -748,6 +770,7 @@ We see in this definition that $g$ \emph{not only} is in the opposite direction 
 Here are some examples of isomorphisms.
 
 \begin{eg}[several fields]
+\phantom{newline}
  \begin{itemize}
   \item In the category $\Set$, the isomorphisms are the bijective functions.
   \item In $\cat{Top}$, the isomorphisms are the homeomorphisms: invertible continuous maps whose inverse is continuous. Mind: this is strictly stronger than saying continuous and bijective (can you give a counterexample?).
@@ -874,6 +897,7 @@ Since objects and morphisms may appear more than once in the diagram, as differe
 \end{caveat}
 
 \begin{eg}
+\phantom{newline}
 \begin{itemize}
  \item The diagram 
  $$
@@ -1043,12 +1067,15 @@ Intuitively, a monomorphism is a map which ``does not map different things of $X
 Here are some examples. 
 
 \begin{eg}[several fields]
+  \phantom{newline}
+
  \begin{itemize}
   \item In $\Set$, the monomorphisms are the injective maps.
   \item In $\cat{Top}$, the monomorphisms are the injective continuous maps.
   \item In the category $\cat{FVect}$ of finite-dimensional vector spaces and linear maps, the monomorphisms are the injective linear maps.
   \item In the category $\Grp$, the monomorphisms are the injective group homomorphisms.
  \end{itemize}
+ 
 \end{eg}
 
 \begin{ex}[several fields]
@@ -1114,6 +1141,7 @@ Moreover, as we have said, the proof of \Cref{isoismono} only requires left inve
 In general, the converse is not true: you may know from topology, or from graph theory, that there are are injective maps which do not have a retraction. Let's see some examples more in detail.
 
 \begin{eg}[sets and relations, linear algebra]
+\phantom{newline}
  \begin{itemize}
   \item In $\Set$, every injective map has a left inverse. Therefore, every monomorphism is split. 
   \item In $\cat{FVect}$, every injective linear map has a left inverse. Therefore, again, every monomorphism is split.
@@ -1174,6 +1202,7 @@ You may not be comfortable yet with believing that \Cref{isoisepi} is true just 
 
 Here are some examples of epimorphisms.
 \begin{eg}[sets and relations, linear algebra, topology]
+\phantom{.}
  \begin{itemize}
   \item In $\Set$, the epimorphisms are the surjective maps.
   \item In $\cat{FVect}$, the epimorphisms are the surjective linear maps.
@@ -1225,6 +1254,7 @@ For example, $\R$ is at the same time a subspace and a quotient of $\R^2$, both 
 This should give us an idea of what to expect as examples of split epimorphisms.
 
 \begin{eg}[sets and relations, linear algebra]
+ \phantom{.}
  \begin{itemize}
   \item In $\Set$, every surjective map has a right inverse. Therefore, every epimorphism is split.\footnote{If you are familiar with set theory, try to show that the axiom of choice is equivalent to the statement that in $\Set$ every epimorphism is split. If you are not familiar with set theory, you can safely ignore this comment.}
   \item In $\cat{FVect}$, every surjective linear map has a right inverse. Therefore, again, every epimorphism is split.
@@ -2755,6 +2785,7 @@ Fully faithful functors are ``injective up to isomorphism'', as the following pr
 
 
 \begin{eg}[algebra, analysis]
+\phantom{.}
  \begin{itemize}
   \item The forgetful functor $\cat{AbGrp}\to\Grp$ is fully faithful. It is not essentially surjective: not every group is isomorphic to an abelian group.
   More generally, a full subcategory always defines a fully faithful ``inclusion'' functor, and vice versa. 
