--- a/1703.03007/logicofspace.tex
+++ b/1703.03007/logicofspace.tex
@@ -20,10 +20,13 @@ bookmarksopenlevel=10
 \linespread{1.05}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
 \usepackage[small]{titlesec}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
 % Each contributor is invited to write a chapter proposing a formal
 % introduction as well as a conceptual discussion of the corresponding
