--- a/1703.03007/logicofspace.tex
+++ b/1703.03007/logicofspace.tex
@@ -225,6 +225,8 @@ For further reading, I recommend~\cite{awodey:tt-and-htpy,apw:vvu-hott,pw:hottvv
 
 I would like to thank Peter LeFanu Lumsdaine, Steve Awodey, and Urs Schreiber, as well as the editors of the volume, for careful reading and helpful comments.
 
+\newpage
+
 \section{Type theory}
 \label{sec:type-theory}
 
