--- a/1406.3219/naturalmodels.tex
+++ b/1406.3219/naturalmodels.tex
@@ -33,9 +33,16 @@ bookmarksopenlevel=10
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
 \usepackage[small]{titlesec}
+\usepackage{cite}
 
 
 %\newcommand{\cors}[1]{\ensuremath{\ulcorner{#1}\urcorner}}
