--- a/0812.0409/weak-omega-cats-from-itt-journal.tex
+++ b/0812.0409/weak-omega-cats-from-itt-journal.tex
@@ -1,4 +1,21 @@
 \documentclass{LMCS}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 9.5in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\linespread{1.05}
+\sloppy
 
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{enumerate}
