--- a/1609.01421v3/continuum_arxiv_3.tex
+++ b/1609.01421v3/continuum_arxiv_3.tex
@@ -3,7 +3,9 @@
 % 2018/1/2 - third arXiv version; first version send to Mathieu Anel and Gabriel Catren
 
 \documentclass[12pt]{article}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -16,17 +18,30 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
-\usepackage{titlesec}
-\titleformat{\section}
-  {\normalfont\large\bfseries}{\thesection}{1em}{}
-\tolerance=1000
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.5in, 9.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\hfuzz = 9pt
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}\hfuzz = 9pt
 \renewcommand{\arraystretch}{1.3}
 
 \usepackage{color}
