--- a/0903.0340/rosetta.arxiv.3-pal.tex
+++ b/0903.0340/rosetta.arxiv.3-pal.tex
@@ -3733,7 +3733,7 @@ for composition: see Figure \ref{hypcube}.  For the cut rule,
 this commuting hexagon says that composition is associative:
 see Figure \ref{cutcube}.
 
-\begin{figure}[ht]
+\begin{figure}[p]
 \dgARROWLENGTH=3.75em
 \di{
 \node[4]{\begin{array}{c}Y\lHom Y\\1_Y\end{array}}
@@ -3754,22 +3754,8 @@ $\bullet \in 1$ denotes the one element of the one-element set.}
 \label{hypcube}
 \end{figure}
 
-{
-So, in general, the sort of logical theory we are discussing involves:
-\begin{itemize}
-\item
-A \emph{category} $C$ of propositions and proofs.
-\item 
-A \emph{functor} $\lHom \maps C^\op \times C \to \Set$
-sending any pair of propositions to the set of 
-proofs leading from one to the other.
-\item
-A set of \emph{dinatural transformations} describing inference
-rules.
-\end{itemize}
-}
 
-\begin{figure}[ht]
+\begin{figure}[p]
 \dgARROWLENGTH=.75em
 \di{
 \node[4]{\begin{array}{c}X\lHom Z\\h \circ (f \circ g)\end{array}}\arrow[2]{s,r}{1_{X\lHom Z}}
@@ -3791,6 +3777,22 @@ ${f\maps W\to Y,}$ ${g\maps X\to W,}$ ${h\maps Y\to Z.}$
 \end{figure}
 
 \newpage
+{
+\noindent
+So, in general, the sort of logical theory we are discussing involves:
+\begin{itemize}
+\item
+A \emph{category} $C$ of propositions and proofs.
+\item 
+A \emph{functor} $\lHom \maps C^\op \times C \to \Set$
+sending any pair of propositions to the set of 
+proofs leading from one to the other.
+\item
+A set of \emph{dinatural transformations} describing inference
+rules.
+\end{itemize}
+}
+
 \section{Computation}
 \label{computation}
 
